# inference_forge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  code-rules.md  code-vibe.md  compose.yaml  deployment.md  file-structure.md  gpu-benchmarks.md  knowledge.md  pyproject.toml  remember.md  setup.sh
Logic/: architecture.md  docker-runtime.md  embeddings.md  extractor-ingestion.md  jobs-and-batching.md  local-runtime.md  media-ingestion.md  model-residency.md  reranking.md  web-console.md
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/api/routes/: embeddings.py  health.py  jobs.py  media.py  models.py  rerank.py
app/platform/: __init__.py  cleanup.py  config.py  errors.py
app/platform/gpu/: __init__.py  policy.py  residency.py  types.py
app/platform/jobs/: __init__.py  factory.py  redis_store.py  store.py  types.py
app/platform/media/: __init__.py  browser_preview.py  direct.py  extractor.py  hash_file.py  probe.py  source_index.py  store.py  types.py
app/platform/storage/: __init__.py  paths.py
app/services/: __init__.py  base.py
app/services/embeddings/: __init__.py  qwen.py  types.py
app/services/reranking/: __init__.py  qwen.py
app/services/runtime/: __init__.py  executor.py  media_inputs.py  types.py  vector.py
app/workers/: __init__.py  scheduler.py
scripts/: start-api.sh  start-redis.sh  start-web.sh  start.sh
web/: README.md  index.html  styles.css
web/app/: api.js  dom.js  main.js  state.js  timeline.js
web/styles/: base.css  components.css  lab.css  responsive.css  sidebar.css
(+10 files in other folders)
